had to put the reference back to FubuMVC.Navigation

--- a/src/DiagnosticsHarness/ripple.dependencies.config
+++ b/src/DiagnosticsHarness/ripple.dependencies.config
@@ -6,6 +6,7 @@ FubuMVC.Core.Assets
 FubuMVC.Core.UI
 FubuMVC.Core.View
 FubuMVC.JQueryUI
+FubuMVC.Navigation
 FubuMVC.Spark
 FubuMVC.StructureMap
 FubuMVC.TwitterBootstrap
