--- a/src/FubuMVC.Diagnostics.Tests/ripple.dependencies.config
+++ b/src/FubuMVC.Diagnostics.Tests/ripple.dependencies.config
@@ -7,6 +7,7 @@ FubuMVC.Core.UI
 FubuMVC.Core.View
 FubuMVC.JQueryUI
 FubuMVC.Katana
+FubuMVC.Navigation
 FubuMVC.OwinHost
 FubuMVC.StructureMap
 FubuMVC.TwitterBootstrap
