--- a/ripple.config
+++ b/ripple.config
@@ -21,6 +21,7 @@
     <Dependency Name="FubuMVC.Core.View" Version="1.0.0.545" Mode="Float" />
     <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.311" Mode="Float" />
     <Dependency Name="FubuMVC.Katana" Version="1.2.0.1601" Mode="Float" />
+    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.191" Mode="Float" />
     <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1601" Mode="Float" />
     <Dependency Name="FubuMVC.Spark" Version="1.0.0.545" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1601" Mode="Float" />
