--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -1,10 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion></ProductVersion>
+    <ProductVersion>
+    </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{A1DEB080-5A9A-44B4-A10B-84DA9BD07AF5}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -14,7 +15,8 @@
     <AssemblyName>FubuMVC.Diagnostics</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
-    <FileUpgradeFlags></FileUpgradeFlags>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
     <OldToolsVersion>4.0</OldToolsVersion>
     <UpgradeBackupLocation />
     <IISExpressSSLPort />
@@ -102,25 +104,6 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Images\arrow-turn-000-left-icon.png" />
-    <Content Include="Content\Images\console-line.png" />
-    <Content Include="Content\Images\down-arrow.png" />
-    <Content Include="Content\Images\filter_wrap_left.gif" />
-    <Content Include="Content\Images\filter_wrap_right.gif" />
-    <Content Include="Content\Images\fubumvc.png" />
-    <Content Include="Content\Images\pre_code_bg_blk.gif" />
-    <Content Include="Content\Scripts\diagnostics\requestVisualization.js" />
-    <Content Include="Content\Scripts\jquery-1.7.min.js" />
-    <Content Include="Content\Scripts\diagnostics\underscore-min.js" />
-    <Content Include="Content\Scripts\diagnostics\json2.js" />
-    <Content Include="Content\Scripts\diagnostics\knockout-1.1.2.js" />
-    <Content Include="Content\Styles\chains\view.css" />
-    <Content Include="Content\Styles\diagnostics\html\preview.css" />
-    <Content Include="Content\Styles\diagnostics\html\selector.css" />
-    <Content Include="Content\Styles\diagnostics\requests\view.css" />
-    <Content Include="diagnostics.asset.config">
-      <SubType>Designer</SubType>
-    </Content>
     <None Include=".package-manifest" />
     <None Include="Chains\ChainVisualization.spark">
       <SubType>Designer</SubType>
@@ -128,8 +111,35 @@
     <None Include="Chrome\Chrome.spark">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Content\Images\arrow-turn-000-left-icon.png" />
+    <Content Include="Content\Images\block.png" />
+    <Content Include="Content\Images\console-line.png" />
+    <Content Include="Content\Images\down-arrow.png" />
+    <Content Include="Content\Images\filter_wrap_left.gif" />
+    <Content Include="Content\Images\filter_wrap_right.gif" />
+    <Content Include="Content\Images\fubumvc.png" />
+    <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\pre_code_bg_blk.gif" />
+    <Content Include="Content\Scripts\diagnostics\json2.js" />
+    <Content Include="Content\Scripts\diagnostics\knockout-1.1.2.js" />
+    <Content Include="Content\Scripts\diagnostics\requestVisualization.js" />
+    <Content Include="Content\Scripts\diagnostics\routes.js" />
+    <Content Include="Content\Scripts\diagnostics\underscore-min.js" />
+    <Content Include="Content\Scripts\jquery-1.7.min.js" />
+    <Content Include="Content\Styles\chains\view.css" />
     <Content Include="Content\Styles\diagnostics\bootstrap.overrides.css" />
+    <Content Include="Content\Styles\diagnostics\default.css" />
+    <Content Include="Content\Styles\diagnostics\html\preview.css" />
+    <Content Include="Content\Styles\diagnostics\html\selector.css" />
+    <Content Include="Content\Styles\diagnostics\master.css" />
+    <Content Include="Content\Styles\diagnostics\requests\view.css" />
     <None Include="Dashboard\Dashboard.spark">
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="diagnostics.asset.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <None Include="Endpoints\Endpoints.spark">
       <SubType>Designer</SubType>
     </None>
     <None Include="ModelBinding\ModelBindingGraph.spark">
@@ -142,26 +152,19 @@
     <None Include="Requests\RequestVisualization.spark">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Endpoints\Endpoints.spark">
-      <SubType>Designer</SubType>
-    </None>
     <Content Include="ripple.dependencies.config">
-      <SubType>Designer</SubType>
-    </Content>
-    <None Include="Shared\Application.spark">
-      <SubType>Designer</SubType>
-    </None>
-    <Content Include="Content\Images\block.png" />
-    <Content Include="Content\Images\logo.png" />
-    <Content Include="Content\Scripts\diagnostics\routes.js" />
-    <Content Include="Content\Styles\diagnostics\default.css" />
-    <Content Include="Content\Styles\diagnostics\master.css" />
-    <Content Include="Shared\bindings.xml">
       <SubType>Designer</SubType>
     </Content>
     <None Include="Shared\_global.spark">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Shared\Application.spark">
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="Shared\bindings.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <None Include="Visualization\BehaviorNode.spark" />
     <Content Include="web.config" />
     <Content Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
@@ -169,7 +172,6 @@
     <Content Include="web.Release.config">
       <DependentUpon>web.config</DependentUpon>
     </Content>
-    <None Include="Visualization\BehaviorNode.spark" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\CommonAssemblyInfo.cs">
@@ -179,48 +181,48 @@
     <Compile Include="BehaviorChainExtensions.cs" />
     <Compile Include="Chains\ChainDetails.cs" />
     <Compile Include="Chains\ChainFubuDiagnostics.cs" />
+    <Compile Include="Chains\ChainRequest.cs" />
     <Compile Include="Chains\ChainVisualization.cs" />
-    <Compile Include="DiagnosticsSettings.cs" />
+    <Compile Include="Chrome\DashboardChrome.cs" />
+    <Compile Include="Core\CoreExtensions.cs" />
+    <Compile Include="Core\Extensions\TagExtensions.cs" />
+    <Compile Include="Dashboard\DashboardFubuDiagnostics.cs" />
+    <Compile Include="Dashboard\DashboardModel.cs" />
+    <Compile Include="Dashboard\DashboardRequestModel.cs" />
+    <Compile Include="DiagnosticsException.cs" />
+    <Compile Include="DiagnosticsRegistration.cs" />
+    <Compile Include="DiagnosticsRegistry.cs" />
+    <Compile Include="Endpoints\EndpointExplorerFubuDiagnostics.cs" />
+    <Compile Include="Endpoints\EndpointExplorerModel.cs" />
+    <Compile Include="Endpoints\EndpointsTable.cs" />
+    <Compile Include="Endpoints\RouteQuery.cs" />
+    <Compile Include="Endpoints\RouteReport.cs" />
     <Compile Include="FubuPageExtensions.cs" />
-    <Compile Include="ModelBinding\ModelBindingFubuDiagnostics.cs" />
     <Compile Include="Model\DiagnosticChain.cs" />
+    <Compile Include="Model\DiagnosticChainsPolicy.cs" />
     <Compile Include="Model\DiagnosticGraph.cs" />
     <Compile Include="Model\DiagnosticGroup.cs" />
     <Compile Include="Model\FubuDiagnosticsConfiguration.cs" />
     <Compile Include="Model\GroupEndpoint.cs" />
-    <Compile Include="Model\DiagnosticChainsPolicy.cs" />
     <Compile Include="Model\IDiagnosticContext.cs" />
+    <Compile Include="ModelBinding\ModelBindingFubuDiagnostics.cs" />
+    <Compile Include="NoDiagnosticsAttribute.cs" />
+    <Compile Include="Packaging\PackageDiagnosticsLogModel.cs" />
+    <Compile Include="Packaging\PackageDiagnosticsModel.cs" />
+    <Compile Include="Packaging\PackageDiagnosticsRequestModel.cs" />
+    <Compile Include="Packaging\PackageLogFubuDiagnostics.cs" />
     <Compile Include="Requests\BehaviorChainTraceTag.cs" />
     <Compile Include="Requests\BehaviorNodeTraceTag.cs" />
     <Compile Include="Requests\HttpRequestVisualization.cs" />
     <Compile Include="Requests\RequestDataFubuDiagnostics.cs" />
     <Compile Include="Requests\RequestLinksTag.cs" />
     <Compile Include="Requests\RequestLogDataOutlineTag.cs" />
+    <Compile Include="Requests\RequestsFubuDiagnostics.cs" />
     <Compile Include="Requests\RequestStepTag.cs" />
     <Compile Include="Requests\RequestTable.cs" />
     <Compile Include="Requests\RequestVisualizationFubuDiagnostics.cs" />
     <Compile Include="Requests\ResponseHeadersTag.cs" />
     <Compile Include="Requests\TracingOutlineTag.cs" />
-    <Compile Include="Endpoints\EndpointsTable.cs" />
-    <Compile Include="Runtime\HttpStatus.cs" />
-    <Compile Include="Runtime\IRequestTraceObserver.cs" />
-    <Compile Include="Runtime\RequestHistoryObserver.cs" />
-    <Compile Include="Runtime\RequestStep.cs" />
-    <Compile Include="Runtime\RequestTraceListener.cs" />
-    <Compile Include="Runtime\TracedStep.cs" />
-    <Compile Include="Runtime\Tracing\IRequestLogBuilder.cs" />
-    <Compile Include="Runtime\Tracing\IRequestTrace.cs" />
-    <Compile Include="Runtime\Tracing\RequestLogBuilder.cs" />
-    <Compile Include="Runtime\Tracing\RequestTrace.cs" />
-    <Compile Include="Shared\TypeEndpoint.cs" />
-    <Compile Include="Chrome\DashboardChrome.cs" />
-    <Compile Include="Core\CoreExtensions.cs" />
-    <Compile Include="Core\Extensions\TagExtensions.cs" />
-    <Compile Include="NoDiagnosticsAttribute.cs" />
-    <Compile Include="Requests\RequestsFubuDiagnostics.cs" />
-    <Compile Include="Endpoints\EndpointExplorerModel.cs" />
-    <Compile Include="Endpoints\RouteQuery.cs" />
-    <Compile Include="Endpoints\RouteReport.cs" />
     <Compile Include="Runtime\ApplyTracing.cs" />
     <Compile Include="Runtime\Assets\BasicAssetDiagnostics.cs" />
     <Compile Include="Runtime\BehaviorFinish.cs" />
@@ -228,28 +230,27 @@
     <Compile Include="Runtime\BehaviorTracerNode.cs" />
     <Compile Include="Runtime\BindingHistory.cs" />
     <Compile Include="Runtime\DebugDetector.cs" />
-    <Compile Include="Runtime\RequestLog.cs" />
     <Compile Include="Runtime\DiagnosticNode.cs" />
-    <Compile Include="DiagnosticsRegistration.cs" />
     <Compile Include="Runtime\FubuDiagnosticsAttribute.cs" />
+    <Compile Include="Runtime\HttpStatus.cs" />
     <Compile Include="Runtime\IDebugDetector.cs" />
     <Compile Include="Runtime\IRequestHistoryCache.cs" />
+    <Compile Include="Runtime\IRequestTraceObserver.cs" />
     <Compile Include="Runtime\RequestHistoryCache.cs" />
+    <Compile Include="Runtime\RequestHistoryObserver.cs" />
+    <Compile Include="Runtime\RequestLog.cs" />
+    <Compile Include="Runtime\RequestStep.cs" />
+    <Compile Include="Runtime\RequestTraceListener.cs" />
+    <Compile Include="Runtime\TracedStep.cs" />
     <Compile Include="Runtime\Tracing\BehaviorCorrelation.cs" />
     <Compile Include="Runtime\Tracing\BehaviorTracer.cs" />
     <Compile Include="Runtime\Tracing\DiagnosticBehavior.cs" />
-    <Compile Include="Chains\ChainRequest.cs" />
-    <Compile Include="Dashboard\DashboardModel.cs" />
-    <Compile Include="Dashboard\DashboardRequestModel.cs" />
-    <Compile Include="Dashboard\DashboardFubuDiagnostics.cs" />
-    <Compile Include="Packaging\PackageLogFubuDiagnostics.cs" />
-    <Compile Include="Packaging\PackageDiagnosticsLogModel.cs" />
-    <Compile Include="Packaging\PackageDiagnosticsModel.cs" />
-    <Compile Include="Packaging\PackageDiagnosticsRequestModel.cs" />
-    <Compile Include="DiagnosticsRegistry.cs" />
-    <Compile Include="DiagnosticsException.cs" />
-    <Compile Include="Endpoints\EndpointExplorerFubuDiagnostics.cs" />
+    <Compile Include="Runtime\Tracing\IRequestLogBuilder.cs" />
+    <Compile Include="Runtime\Tracing\IRequestTrace.cs" />
+    <Compile Include="Runtime\Tracing\RequestLogBuilder.cs" />
+    <Compile Include="Runtime\Tracing\RequestTrace.cs" />
     <Compile Include="Shared\Tags\ControlGroupDivTag.cs" />
+    <Compile Include="Shared\TypeEndpoint.cs" />
     <Compile Include="Visualization\BehaviorNodeViewModel.cs" />
     <Compile Include="Visualization\DescriptionVisualizationPolicy.cs" />
     <Compile Include="Visualization\DetailsTableBuilderExtensions.cs" />
@@ -278,10 +279,12 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>11210</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl></IISUrl>
+          <IISUrl>
+          </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl></CustomServerUrl>
+          <CustomServerUrl>
+          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
@@ -295,8 +298,6 @@
   </Target>
   -->
   <ItemGroup>
-    <EmbeddedResource Include="pak-Config.zip" />
-    <EmbeddedResource Include="pak-Data.zip" />
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
