ILogListener registration varies by trace level

--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -236,6 +236,7 @@
     <Compile Include="Runtime\IDebugDetector.cs" />
     <Compile Include="Runtime\IRequestHistoryCache.cs" />
     <Compile Include="Runtime\IRequestTraceObserver.cs" />
+    <Compile Include="Runtime\ProductionModeTraceListener.cs" />
     <Compile Include="Runtime\RequestHistoryCache.cs" />
     <Compile Include="Runtime\RequestHistoryObserver.cs" />
     <Compile Include="Runtime\RequestLog.cs" />
