--- a/src/FubuMVC.Diagnostics.Tests/ripple.dependencies.config
+++ b/src/FubuMVC.Diagnostics.Tests/ripple.dependencies.config
@@ -9,6 +9,7 @@ FubuMVC.JQueryUI
 FubuMVC.Katana
 FubuMVC.Navigation
 FubuMVC.OwinHost
+FubuMVC.Spark
 FubuMVC.StructureMap
 FubuMVC.TwitterBootstrap
 FubuTestingSupport
@@ -18,5 +19,6 @@ Owin
 Owin.Extensions
 Owin.Types
 RhinoMocks
+Spark
 structuremap
 structuremap.automocking
