--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Runtime\Tracing\DiagnosticBehaviorTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Tracing\RequestTraceTester.cs" />
+    <Compile Include="Runtime\Tracing_is_not_applied_to_chains_that_are_tagged_no_tracing.cs" />
     <Compile Include="Visualization\DescriptionWriterTester.cs" />
     <Compile Include="Visualization\Visualizers\BehaviorStartAndFinishEndpointsTester.cs" />
     <Compile Include="Visualization\Visualizers\ModelBindingLogEndpointTester.cs" />
